# slam-navigation-robot-catch

./: README.md
robot_gen72/: start_speech_nodes.sh
robot_gen72/RML_robot_test/: udp  udp.cpp  udp_test  udpsend.cpp
robot_gen72/src/: example.launch
robot_gen72/src/handsfree_speech/: CMakeLists.txt  package.xml
robot_gen72/src/handsfree_speech/Linux_aisound_exp1227_aitalk_exp1227_5602d51a/samples/asr_offline_record_sample/: asr_offline_record_sample.c
robot_gen72/src/handsfree_speech/Linux_aisound_exp1227_aitalk_exp1227_5602d51a/samples/asr_offline_sample/: asr_offline_sample.c
robot_gen72/src/handsfree_speech/Linux_aisound_exp1227_aitalk_exp1227_5602d51a/samples/tts_offline_sample/: tts_offline_sample.c
robot_gen72/src/handsfree_speech/cfg/: python_logging.conf
robot_gen72/src/handsfree_speech/cfg/msc/res/asr/GrmBuilld/: bhbmplea.d  hojryaba.d  rnwttica.d
robot_gen72/src/handsfree_speech/cfg/msc/res/asr/GrmBuilld/temp/: control.g  control_16K  edxhjmba.d
robot_gen72/src/handsfree_speech/cfg/msc/res/asr_1/GrmBuilld/: control.g  qoguiuaa.d
robot_gen72/src/handsfree_speech/cfg/msc/res/asr_1/GrmBuilld/temp/: control_16K
robot_gen72/src/handsfree_speech/cfg/msc/res/tts/: xiaofeng.jet  xiaoyan.jet
robot_gen72/src/handsfree_speech/cfg/msc/res/tts_1/: xiaofeng.jet  xiaoyan.jet
robot_gen72/src/handsfree_speech/launch/: offline_interactive_ros.launch
robot_gen72/src/handsfree_speech/md/1.Start_using/: 开始使用.md
robot_gen72/src/handsfree_speech/md/2.Custom_voice/: 自定义语音.md
robot_gen72/src/handsfree_speech/md/3.Voice_control/: 语音控制.md
robot_gen72/src/handsfree_speech/md/4.Voice_navigation/: 语音导航.md
robot_gen72/src/handsfree_speech/md/5.Voice_patrol/: 语音巡逻.md
robot_gen72/src/handsfree_speech/res/: speaking_ok.txt
robot_gen72/src/handsfree_speech/script/Voice_control/: cn_voice_cmd_vel.py  cn_voice_cmd_vel.py.bak
robot_gen72/src/handsfree_speech/script/Voice_navigation/: set_goal.py
robot_gen72/src/handsfree_speech/script/Voice_patrol/: multi_point_patrol.py
robot_gen72/src/handsfree_speech/script/robot/: TTS.py  TTS.py.bak  mainrobot.py  mainrobot.py.bak  send.py  test.py
robot_gen72/src/handsfree_speech/script/robot/utils/: Sparkapi.py  Sparkapi.py.bak  TCPclient.py  TCPclient.py.bak  TTS.py  TTS.py.bak  UDPclient.py  UDPclient.py.bak  bm25.py  bm25.py.bak  load_file.txt  main.py  main.py.bak  maintest.py  maintest.py.bak  nav_goal.py  openai_api_request.py  openai_api_request.py.bak  pcm2wav.py  pcm2wav.py.bak  socket_llm.py  socket_llm.py.bak  tt.py  tt.py.bak
robot_gen72/src/handsfree_speech/script/robot/utils/test/: UDPtest.py  UDPtest.py.bak  test1.py  test1.py.bak  testserver.py  wav2txt_.py  wav2txt_.py.bak  wav2txt_client.py  wav2txt_client.py.bak  新建 文本文档1.txt
robot_gen72/src/handsfree_speech/script/vad_py/: FileParser.py  RecordParser.py  RecordParser.py.bak  audio.py  util.py  vad.py  vad.py.bak  vad_record.py
robot_gen72/src/handsfree_speech/src/: linuxrec.c  speech_recognizer.c  默认指令（使用前阅读）.md
robot_gen72/src/handsfree_speech/src/Voice_feedback/: tts_offline_sample.cpp
robot_gen72/src/handsfree_speech/src/Voice_recognition/: asr_offline_record_sample.cpp
robot_gen72/src/robot_contrl/: CMakeLists.txt  package.xml
robot_gen72/src/yolov5_detect/: CMakeLists.txt  package.xml
robot_gen72/src/yolov5_detect/launch/: rstest.launch
robot_gen72/src/yolov5_detect/msg/: CommandWithPosition.msg  DetectedObject.msg
robot_gen72/src/yolov5_detect/scripts/: rstest.py
robot_gen72/src/yolov5_detect/scripts/config/: yolov5s.yaml
salm_navigation/: CMakeLists.txt  Waypoints.txt  load_path.yml  road_msg.txt  run.yml
salm_navigation/data/path/: trajectory.txt
salm_navigation/livox/livox_dora_driver2/: CMakeLists.txt
slam_navigation/: CMakeLists.txt
whisper/: qwen72.py
(+18 files in other folders)
